--- a/index-css.css
+++ b/index-css.css
@@ -110,7 +110,7 @@ p {
   padding: 0%;
 }
 
-/* image grid */
+/* image grid i nettstilling.html*/
 .row {
   display: -ms-flexbox; /* IE 10 */
   display: flex;
@@ -130,7 +130,34 @@ p {
   vertical-align: middle;
 }
 
+/* om-oss.html*/
+.grid-container-om-oss {
+  display: grid;
+  grid-template-columns: auto auto; /*2 coloumns - auto auto*/
+  background-color: white;
+  padding: 2%;
+}
 
+.grid-item-om-oss {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid white(14, 0, 0, 0.062); /* border: 0px = makes border invisible OR change the colour to white*/
+  text-align: left;
+  padding: 0%;
+}
+/* soek.html*/
+.grid-container-soek {
+  display: grid;
+  grid-template-columns: auto auto; /*2 coloumns - auto auto*/
+  background-color: white;
+  padding: 2%;
+}
+
+.grid-item-soek {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid white(14, 0, 0, 0.062); /* border: 0px = makes border invisible OR change the colour to white*/
+  text-align: left;
+  padding: 0%;
+}
 
 /* search bar control in soek.html*/
 .searchbar {
