--- a/index-css.css
+++ b/index-css.css
@@ -30,14 +30,14 @@ body {
   color: black;
 }
 
-/* Slideshow container */
+/* Slideshow container 
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
   
-/* The dots */
+/* The dots 
 .dot {
   height: 5px;
   width: 5px;
@@ -48,12 +48,12 @@ body {
   transition: background-color 0.6s ease;
 }
 
-/* colour of the dot*/
+/* colour of the dot
 .active {
   background-color: greenyellow;
 }
 
-/* Fading animation */
+/* Fading animation 
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 3s;
@@ -71,10 +71,11 @@ body {
   to {opacity: 1}
 }
 
-/* decrease text size on smaller screens*/
+/* decrease text size on smaller screens
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+*/
 
 /*applies to all h1*/
 h1 {
@@ -100,11 +101,11 @@ p {
   display: grid;
   grid-template-columns: auto auto; /*2 coloumns - auto auto*/
   background-color: white;
-  padding: 2.5%;
+  padding-left: 1.8%;
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
-  border: 0px solid rgba(14, 0, 0, 0.062); /* border: 0px = makes border invisible OR change the colour to white*/
+  border: 10px solid white; /* border: 0px = makes border invisible OR change the colour to white*/
   text-align: left;
   padding: 0%;
 }
